# axum-clean-architecture

./: .env  Cargo.toml  README.md
migrations/: 20240828065620_user.down.sql  20240828065620_user.up.sql  20240828070139_todo.down.sql  20240828070139_todo.up.sql
src/: container.rs  create_app.rs  lib.rs  main.rs
src/api/: mod.rs
src/api/controllers/: todo_handler.rs  user_handler.rs
src/api/dto/: mod.rs  response.rs  todo.rs  user.rs
src/domain/: constants.rs  error.rs
src/domain/models/: todo.rs  user.rs
src/domain/repositories/: mod.rs  repository.rs  todo.rs  user.rs
src/domain/services/: todo.rs  user.rs
src/infrastructure/: mod.rs
src/infrastructure/database/: sqlite.rs
src/infrastructure/models/: todo.rs  user.rs
src/infrastructure/repositories/: todo.rs  user.rs
src/services/: todo.rs  user.rs
